--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 ---
 layout: page
 title: Welcome
-description: Landing page for the MBI project
 ---
 
-Text content
+Text content for landing Page
